# FiNullFW

./: CMakeLists.txt  README.md  partitions.csv  sdkconfig.defaults
components/mlx90640/: CMakeLists.txt  MLX90640_I2C_Driver.c  MLX90640_I2C_Driver.h
main/: CMakeLists.txt  actuators.c  actuators.h  app_main.c  comms.c  comms.h  config.c  config.h  fsm.c  fsm.h  mesh.c  mesh.h  sensors.c  sensors.h  web.c  web.h
www/: index.html
